First banner created

--- a/index.html
+++ b/index.html
@@ -95,6 +95,27 @@
       </div>
     </div>
 
+    <!-- First Banner -->
+    <div class="firstBanner" onclick="location.href='#';">
+      <h1>iPhone 14</h1>
+      <p>Big and bigger.</p>
+      <div class="firstBannerButtons">
+        <div class="firstBannerButton firstBannerButton1">
+          <a href="#"
+            ><span class="firstBannerButton1Text">Learn more</span
+            ><i class="fa-solid fa-chevron-right"></i
+          ></a>
+        </div>
+        <div class="firstBannerButton firstBannerButton2">
+          <a href="#"
+            ><span class="firstBannerButton2Text">Buy</span
+            ><i class="fa-solid fa-chevron-right"></i
+          ></a>
+        </div>
+      </div>
+      <img src="./Imgs/hero_iphone14_cropped.jpg" alt="" />
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
