Gift banner created

--- a/index.html
+++ b/index.html
@@ -116,6 +116,22 @@
       <img src="./Imgs/hero_iphone14_cropped.jpg" alt="" />
     </div>
 
+    <!-- Gift Banner -->
+    <div class="giftBanner" onclick="location.href='#';">
+      <img src="./Imgs/hero_apple_gift_cropped.jpg" alt="" />
+      <h1>Wow yourself.</h1>
+      <p>
+        Get the gift you've been <br class="breakGiftBannerText" />
+        eyeing all season.
+      </p>
+      <div class="giftBannerButton">
+        <a href="#"
+          ><span class="giftBannerButtonText">Shop</span
+          ><i class="fa-solid fa-chevron-right"></i
+        ></a>
+      </div>
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
