Apple watch 8 banner created

--- a/index.html
+++ b/index.html
@@ -132,6 +132,28 @@
       </div>
     </div>
 
+    <!-- Apple Watch 8 Banner -->
+    <div class="watchBanner" onclick="location.href='#';">
+      <h1><i class="fa-brands fa-apple logoWatch"></i>WATCH</h1>
+      <h6>SERIES<span>8</span></h6>
+      <p>A healthy leap ahead.</p>
+      <div class="watchBannerButtons">
+        <div class="watchBannerButton watchBannerButton1">
+          <a href="#"
+            ><span class="watchBannerButton1Text">Learn more</span
+            ><i class="fa-solid fa-chevron-right"></i
+          ></a>
+        </div>
+        <div class="watchBannerButton watchBannerButton2">
+          <a href="#"
+            ><span class="watchBannerButton2Text">Buy</span
+            ><i class="fa-solid fa-chevron-right"></i
+          ></a>
+        </div>
+      </div>
+      <img src="./Imgs/hero_apple_watch_series_8_cropped.jpg" alt="" />
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
