Gift2 & Card banners created

--- a/index.html
+++ b/index.html
@@ -154,6 +154,46 @@
       <img src="./Imgs/hero_apple_watch_series_8_cropped.jpg" alt="" />
     </div>
 
+    <!-- Gift2 & Card Banners -->
+    <div class="gift2AndCardBanners">
+      <div class="gift2Banner" onclick="location.href='#';">
+        <img src="./Imgs/gift2_cropped.jpg" alt="" />
+        <h1>A gift for every wish.</h1>
+        <p>
+          Find something for everyone <br />
+          this Lunar New Year
+        </p>
+        <div class="gift2BannerButton">
+          <a href="#"
+            ><span class="gift2BannerButtonText">Shop the gift guide</span
+            ><i class="fa-solid fa-chevron-right"></i
+          ></a>
+        </div>
+      </div>
+      <div class="cardBanner" onclick="location.href='#';">
+        <img src="./Imgs/card_cropped.jpg" alt="" />
+        <h1><i class="fa-brands fa-apple logoCard"></i>Card</h1>
+        <p>
+          Get up to 3% Daily Cash back <br />
+          with every purchase.
+        </p>
+        <div class="cardBannerButtons">
+          <div class="cardBannerButton cardBannerButton1">
+            <a href="#"
+              ><span class="cardBannerButton1Text">Learn more</span
+              ><i class="fa-solid fa-chevron-right"></i
+            ></a>
+          </div>
+          <div class="cardBannerButton cardBannerButton2">
+            <a href="#"
+              ><span class="cardBannerButton2Text">Apply now</span
+              ><i class="fa-solid fa-chevron-right"></i
+            ></a>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
