MacBook Pro & HomePod banners created

--- a/index.html
+++ b/index.html
@@ -154,6 +154,52 @@
       <img src="./Imgs/hero_apple_watch_series_8_cropped.jpg" alt="" />
     </div>
 
+    <!--MacBook Pro & HomePod Banners -->
+    <div class="macBookProAndHomePodBanners">
+      <div class="macBookProBanner" onclick="location.href='#';">
+        <img src="./Imgs/macbookpro_cropped.jpg" alt="" />
+        <h1>MacBook Pro</h1>
+        <p>
+          Supercharged by <br class="breakMacBookProBannerText" />
+          M2 Pro and M2 Max.
+        </p>
+        <div class="macBookProBannerButtons">
+          <div class="macBookProBannerButton macBookProBannerButton1">
+            <a href="#"
+              ><span class="macBookProBannerButton1Text">Learn more</span
+              ><i class="fa-solid fa-chevron-right"></i
+            ></a>
+          </div>
+          <div class="macBookProBannerButton macBookProBannerButton2">
+            <a href="#"
+              ><span class="macBookProBannerButton2Text">Buy</span
+              ><i class="fa-solid fa-chevron-right"></i
+            ></a>
+          </div>
+        </div>
+      </div>
+      <div class="homePodBanner" onclick="location.href='#';">
+        <img src="./Imgs/homepod_cropped.jpg" alt="" />
+        <h1>HomePod</h1>
+        <p>Profound Sound</p>
+        <h6>Available starting 2.3</h6>
+        <div class="homePodBannerButtons">
+          <div class="homePodBannerButton homePodBannerButton1">
+            <a href="#"
+              ><span class="homePodBannerButton1Text">Learn more</span
+              ><i class="fa-solid fa-chevron-right"></i
+            ></a>
+          </div>
+          <div class="homePodBannerButton homePodBannerButton2">
+            <a href="#"
+              ><span class="homePodBannerButton2Text">Order now</span
+              ><i class="fa-solid fa-chevron-right"></i
+            ></a>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Gift2 & Card Banners -->
     <div class="gift2AndCardBanners">
       <div class="gift2Banner" onclick="location.href='#';">
