--- a/index.html
+++ b/index.html
@@ -240,6 +240,220 @@
       </div>
     </div>
 
+    <!-- Apple TV Plus -->
+    <div class="appleTvPlus appleTvPlusLargeScreen">
+      <div class="appleTvPlusTopSectionAndButtons">
+        <div class="rightLeftButtonsSlider">
+          <i class="fa-solid fa-chevron-left leftButtonSlider"></i>
+          <i class="fa-solid fa-chevron-right rightButtonSlider"></i>
+        </div>
+        <div class="appleTvPlusTopSection">
+          <div class="zerothSeries seriesItem">
+            <img class="zerothSeriesImg" src="./Imgs/appleTV+10.jpg" alt="" />
+            <div class="bottomSectionSeries bottomSectionSeries0 noneDisplay">
+              <div class="streamNowButton streamNowButton0">
+                <p>Stream now</p>
+                <i class="fa-solid fa-circle-play"></i>
+              </div>
+              <p class="seriesInfo seriesInfo0">
+                Drama
+                <span class="seriesInfoText">
+                  One man's freedom hides in another man's darkness.
+                </span>
+              </p>
+            </div>
+          </div>
+
+          <div class="firstSeries seriesItem">
+            <img class="firstSeriesImg" src="./Imgs/appleTV+1.jpg" alt="" />
+            <div class="bottomSectionSeries bottomSectionSeries1 flexDisplay">
+              <div class="streamNowButton streamNowButton1">
+                <p>Stream now</p>
+                <i class="fa-solid fa-circle-play"></i>
+              </div>
+              <p class="seriesInfo seriesInfo1">
+                Thriller
+                <span class="seriesInfoText">Read between the lies.</span>
+              </p>
+            </div>
+          </div>
+
+          <div class="secondSeries seriesItem">
+            <img class="secondSeriesImg" src="./Imgs/appleTV+2.jpg" alt="" />
+            <div class="bottomSectionSeries bottomSectionSeries2 noneDisplay">
+              <div class="streamNowButton streamNowButton2">
+                <p>Stream now</p>
+                <i class="fa-solid fa-circle-play"></i>
+              </div>
+              <p class="seriesInfo seriesInfo2">
+                Drama
+                <span class="seriesInfoText"> Shoot for the moon.</span>
+              </p>
+            </div>
+          </div>
+
+          <div class="thirdSeries seriesItem">
+            <img class="thirdSeriesImg" src="./Imgs/appleTV+3.jpg" alt="" />
+            <div class="bottomSectionSeries bottomSectionSeries3 noneDisplay">
+              <div class="streamNowButton streamNowButton3">
+                <p>Stream now</p>
+                <i class="fa-solid fa-circle-play"></i>
+              </div>
+              <p class="seriesInfo seriesInfo3">
+                Comedy
+                <span class="seriesInfoText">Breakdown. Breakthrough.</span>
+              </p>
+            </div>
+          </div>
+
+          <div class="fourthSeries seriesItem">
+            <img class="fourthSeriesImg" src="./Imgs/appleTV+4.jpg" alt="" />
+            <div class="bottomSectionSeries bottomSectionSeries4 noneDisplay">
+              <div class="streamNowButton streamNowButton4">
+                <p>Stream now</p>
+                <i class="fa-solid fa-circle-play"></i>
+              </div>
+              <p class="seriesInfo seriesInfo4">
+                Comedy
+                <span class="seriesInfoText"
+                  >Catch up before Season 3 premieres on March 15.</span
+                >
+              </p>
+            </div>
+          </div>
+
+          <div class="fifthSeries seriesItem">
+            <img class="fifthSeriesImg" src="./Imgs/appleTV+5.jpg" alt="" />
+            <div class="bottomSectionSeries bottomSectionSeries5 noneDisplay">
+              <div class="streamNowButton streamNowButton5">
+                <p>Stream now</p>
+                <i class="fa-solid fa-circle-play"></i>
+              </div>
+              <p class="seriesInfo seriesInfo5">
+                Drama
+                <span class="seriesInfoText"
+                  >Connie Britton stars in a new series from the producer of
+                  Friday Night Lights.</span
+                >
+              </p>
+            </div>
+          </div>
+
+          <div class="sixthSeries seriesItem">
+            <img class="sixthSeriesImg" src="./Imgs/appleTV+6.jpg" alt="" />
+            <div class="bottomSectionSeries bottomSectionSeries6 noneDisplay">
+              <div class="streamNowButton streamNowButton6">
+                <p>Stream now</p>
+                <i class="fa-solid fa-circle-play"></i>
+              </div>
+              <p class="seriesInfo seriesInfo6">
+                Drama
+                <span class="seriesInfoText"
+                  >No disappearance is a coincidence.</span
+                >
+              </p>
+            </div>
+          </div>
+
+          <div class="seventhSeries seriesItem">
+            <img class="seventhSeriesImg" src="./Imgs/appleTV+7.jpg" alt="" />
+            <div class="bottomSectionSeries bottomSectionSeries7 noneDisplay">
+              <div class="streamNowButton streamNowButton7">
+                <p>Stream now</p>
+                <i class="fa-solid fa-circle-play"></i>
+              </div>
+              <p class="seriesInfo seriesInfo7">
+                Thriller
+                <span class="seriesInfoText">The final reckoning.</span>
+              </p>
+            </div>
+          </div>
+
+          <div class="eighthSeries seriesItem">
+            <img class="eighthSeriesImg" src="./Imgs/appleTV+8.jpg" alt="" />
+            <div class="bottomSectionSeries bottomSectionSeries8 noneDisplay">
+              <div class="streamNowButton streamNowButton8">
+                <p>Stream now</p>
+                <i class="fa-solid fa-circle-play"></i>
+              </div>
+              <p class="seriesInfo seriesInfo8">
+                Drama
+                <span class="seriesInfoText"
+                  >Oscar Nominee: Best Actor in a Supporting Role.</span
+                >
+              </p>
+            </div>
+          </div>
+
+          <div class="ninthSeries seriesItem">
+            <img class="ninthSeriesImg" src="./Imgs/appleTV+9.jpg" alt="" />
+            <div class="bottomSectionSeries bottomSectionSeries9 noneDisplay">
+              <div class="streamNowButton streamNowButton9">
+                <p>Stream now</p>
+                <i class="fa-solid fa-circle-play"></i>
+              </div>
+              <p class="seriesInfo seriesInfo9">
+                Thriller
+                <span class="seriesInfoText"
+                  >We're all different people at work.</span
+                >
+              </p>
+            </div>
+          </div>
+
+          <div class="tenthSeries seriesItem">
+            <img class="tenthSeriesImg" src="./Imgs/appleTV+10.jpg" alt="" />
+            <div class="bottomSectionSeries bottomSectionSeries10 noneDisplay">
+              <div class="streamNowButton streamNowButton10">
+                <p>Stream now</p>
+                <i class="fa-solid fa-circle-play"></i>
+              </div>
+              <p class="seriesInfo seriesInfo10">
+                Drama
+                <span class="seriesInfoText">
+                  One man's freedom hides in another man's darkness.
+                </span>
+              </p>
+            </div>
+          </div>
+
+          <div class="eleventhSeries seriesItem">
+            <img class="eleventhSeriesImg" src="./Imgs/appleTV+1.jpg" alt="" />
+            <div class="bottomSectionSeries bottomSectionSeries11 noneDisplay">
+              <div class="streamNowButton streamNowButton11">
+                <p>Stream now</p>
+                <i class="fa-solid fa-circle-play"></i>
+              </div>
+              <p class="seriesInfo seriesInfo11">
+                Thriller
+                <span class="seriesInfoText">Read between the lies.</span>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="appleTvPlusBottomSection">
+        <div class="circlesStatusSeries">
+          <span class="circleStatusSeries firstCircle selectedCircle"></span>
+          <span class="circleStatusSeries secondCircle unselectedCircle"></span>
+          <span class="circleStatusSeries thirdCircle unselectedCircle"></span>
+          <span class="circleStatusSeries fourthCircle unselectedCircle"></span>
+          <span class="circleStatusSeries fifthCircle unselectedCircle"></span>
+          <span class="circleStatusSeries sixthCircle unselectedCircle"></span>
+          <span
+            class="circleStatusSeries seventhCircle unselectedCircle"
+          ></span>
+          <span class="circleStatusSeries eighthCircle unselectedCircle"></span>
+          <span class="circleStatusSeries ninthCircle unselectedCircle"></span>
+          <span class="circleStatusSeries tenthCircle unselectedCircle"></span>
+        </div>
+
+        <i class="fa-regular fa-circle-play playButtonSeries hiddenClass"></i>
+        <i class="fa-regular fa-circle-pause pauseButtonSeries"></i>
+      </div>
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
