--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
     </div>
 
     <!-- Apple TV Plus -->
-    <div class="appleTvPlus appleTvPlusLargeScreen">
+    <div class="appleTvPlus">
       <div class="appleTvPlusTopSectionAndButtons">
         <div class="rightLeftButtonsSlider">
           <i class="fa-solid fa-chevron-left leftButtonSlider"></i>
@@ -451,6 +451,242 @@
 
         <i class="fa-regular fa-circle-play playButtonSeries hiddenClass"></i>
         <i class="fa-regular fa-circle-pause pauseButtonSeries"></i>
+      </div>
+    </div>
+
+    <!-- Footer -->
+    <div class="footer">
+      <div class="topSectionFooter">
+        <p>
+          To access and use all the features of Apple Card, you must add Apple
+          Card to Wallet on an iPhone or iPad with the latest version of iOS or
+          iPadOS. Update to the latest version by going to Settings > General >
+          Software Update. Tap Download and Install.
+        </p>
+        <p>Available for qualifying applicants in the United States.</p>
+        <p>
+          Apple Card is issued by Goldman Sachs Bank USA, Salt Lake City Branch.
+        </p>
+        <p>
+          Learn more about how Apple Card applications are evaluated at
+          <a href="#">support.apple.com/kb/HT209218</a>.
+        </p>
+      </div>
+
+      <div class="middleSectionFooter">
+        <div class="firstColumnFooter">
+          <div class="firstFooterCategory footerCategory">
+            <div class="firstFooterTitle footerTitle">
+              <p>Shop and Learn</p>
+              <p class="firstFooterTitleOpener footerTitleOpener">+</p>
+            </div>
+
+            <div class="firstFooterSubtitles footerSubtitles">
+              <a href="#">Store</a>
+              <a href="#">Mac</a>
+              <a href="#">iPad</a>
+              <a href="#">iPhone</a>
+              <a href="#">Watch</a>
+              <a href="#">AirPods</a>
+              <a href="#">TV & Home</a>
+              <a href="#">AirTag</a>
+              <a href="#">Accessories</a>
+              <a href="#" class="lastItemColumn lastItemCategory">Gift Cards</a>
+            </div>
+          </div>
+
+          <div class="secondFooterCategory footerCategory">
+            <div class="secondFooterTitle footerTitle">
+              <p>Apple Wallet</p>
+              <p class="secondFooterTitleOpener footerTitleOpener">+</p>
+            </div>
+
+            <div class="secondFooterSubtitles footerSubtitles">
+              <a href="#">Wallet</a>
+              <a href="#">Apple Card</a>
+              <a href="#">Apple Pay</a>
+              <a href="#" class="lastItemCategory">Apple Cash</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="secondColumnFooter">
+          <div class="thirdFooterCategory footerCategory">
+            <div class="thirdFooterTitle footerTitle">
+              <p>Account</p>
+              <p class="thirdFooterTitleOpener footerTitleOpener">+</p>
+            </div>
+
+            <div class="thirdFooterSubtitles footerSubtitles">
+              <a href="#">Manage Your Apple ID</a>
+              <a href="#">Apple Store Account</a>
+              <a href="#" class="lastItemColumn lastItemCategory">iCloud.com</a>
+            </div>
+          </div>
+
+          <div class="fourthFooterCategory footerCategory">
+            <div class="fourthFooterTitle footerTitle">
+              <p>Entertainment</p>
+              <p class="fourthFooterTitleOpener footerTitleOpener">+</p>
+            </div>
+
+            <div class="fourthFooterSubtitles footerSubtitles">
+              <a href="#">Apple One</a>
+              <a href="#">Apple TV+</a>
+              <a href="#">Apple Music</a>
+              <a href="#">Apple Arcade</a>
+              <a href="#">Apple Fitness+</a>
+              <a href="#">Apple News+</a>
+              <a href="#">Apple Podcasts</a>
+              <a href="#">Apple Books</a>
+              <a href="#" class="lastItemCategory">App Store</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="thirdColumnFooter">
+          <div class="fifthFooterCategory footerCategory">
+            <div class="fifthFooterTitle footerTitle">
+              <p>Apple Store</p>
+              <p class="fifthFooterTitleOpener footerTitleOpener">+</p>
+            </div>
+
+            <div class="fifthFooterSubtitles footerSubtitles">
+              <a href="#">Find a Store</a>
+              <a href="#">Genius Bar</a>
+              <a href="#">Today at Apple</a>
+              <a href="#">Apple Camp</a>
+              <a href="#">Apple Store App</a>
+              <a href="#">Certified Refurbished</a>
+              <a href="#">Financing</a>
+              <a href="#">Apple Trade In</a>
+              <a href="#">Order Status</a>
+              <a href="#" class="lastItemCategory">Shopping Help</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="fourthColumnFooter">
+          <div class="sixthFooterCategory footerCategory">
+            <div class="sixthFooterTitle footerTitle">
+              <p>For Business</p>
+              <p class="sixthFooterTitleOpener footerTitleOpener">+</p>
+            </div>
+
+            <div class="sixthFooterSubtitles footerSubtitles">
+              <a href="#">Apple and Business</a>
+              <a href="#" class="lastItemColumn lastItemCategory"
+                >Shop for Business</a
+              >
+            </div>
+          </div>
+
+          <div class="seventhFooterCategory footerCategory">
+            <div class="seventhFooterTitle footerTitle">
+              <p>For Education</p>
+              <p class="seventhFooterTitleOpener footerTitleOpener">+</p>
+            </div>
+
+            <div class="seventhFooterSubtitles footerSubtitles">
+              <a href="#">Apple and Education</a>
+              <a href="#">Shop for K-12</a>
+              <a href="#" class="lastItemColumn lastItemCategory"
+                >Shop for College</a
+              >
+            </div>
+          </div>
+
+          <div class="eighthFooterCategory footerCategory">
+            <div class="eighthFooterTitle footerTitle">
+              <p>For Healthcare</p>
+              <p class="eighthFooterTitleOpener footerTitleOpener">+</p>
+            </div>
+
+            <div class="eighthFooterSubtitles footerSubtitles">
+              <a href="#">Apple in Healthcare</a>
+              <a href="#">Health on Apple Watch</a>
+              <a href="#" class="lastItemColumn lastItemCategory"
+                >Health Records on iPhone</a
+              >
+            </div>
+          </div>
+
+          <div class="ninthFooterCategory footerCategory">
+            <div class="ninthFooterTitle footerTitle">
+              <p>For Government</p>
+              <p class="ninthFooterTitleOpener footerTitleOpener">+</p>
+            </div>
+
+            <div class="ninthFooterSubtitles footerSubtitles">
+              <a href="#">Shop for Government</a>
+              <a href="#" class="lastItemCategory"
+                >Shop for Veterans and Military</a
+              >
+            </div>
+          </div>
+        </div>
+
+        <div class="fifthColumnFooter">
+          <div class="tenthFooterCategory footerCategory">
+            <div class="tenthFooterTitle footerTitle">
+              <p>Apple Values</p>
+              <p class="tenthFooterTitleOpener footerTitleOpener">+</p>
+            </div>
+
+            <div class="tenthFooterSubtitles footerSubtitles">
+              <a href="#">Accessibility</a>
+              <a href="#">Education</a>
+              <a href="#">Environment</a>
+              <a href="#">Inclusion and Diversity</a>
+              <a href="#">Privacy</a>
+              <a href="#">Racial Equity and Justice</a>
+              <a href="#" class="lastItemColumn lastItemCategory"
+                >Supplier Responsibility</a
+              >
+            </div>
+          </div>
+
+          <div class="eleventhFooterCategory footerCategory">
+            <div class="eleventhFooterTitle footerTitle">
+              <p>About Apple</p>
+              <p class="eleventhFooterTitleOpener footerTitleOpener">+</p>
+            </div>
+
+            <div class="eleventhFooterSubtitles footerSubtitles">
+              <a href="#">Newsroom</a>
+              <a href="#">Apple Leadership</a>
+              <a href="#">Career Opportunities</a>
+              <a href="#">Investors</a>
+              <a href="#">Ethics & Compliance</a>
+              <a href="#">Events</a>
+              <a href="#" class="lastItemCategory">Contact Apple</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="bottomSectionFooter">
+        <p>
+          More ways to shop: <a href="#">Find an Apple Store</a> or
+          <a href="#">other retailer</a> near you. Or call 1-800-MY-APPLE.
+        </p>
+        <div class="bottomBorderFooter"></div>
+        <div class="bottomSectionFooter2">
+          <!-- <p>Copyright © 2023 Apple Inc. All rights reserved.</p> -->
+
+          <div class="bottomLeftSectionFooter">
+            <p>Copyright © 2023 Apple Inc. All rights reserved.</p>
+            <div>
+              <a href="#">Privacy Policy</a>
+              <a href="#">Terms of Use</a>
+              <a href="#">Sales and Refunds</a>
+              <a href="#">Legal</a>
+              <a href="#">Site Map</a>
+            </div>
+          </div>
+
+          <a href="#" class="languageFooter">United States</a>
+        </div>
       </div>
     </div>
 
