--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
               <a href="#">Privacy Policy</a>
               <a href="#">Terms of Use</a>
               <a href="#">Sales and Refunds</a>
-              <a href="#">Legal</a>
+              <a href="#" class="oneToLastItem">Legal</a>
               <a href="#">Site Map</a>
             </div>
           </div>
