Images src changed to be visible on Github pages

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <span class="hamburgerBar hamburgerBar2"></span>
       </div>
       <a href="#" class="logoIcon menuElement"
-        ><img src="./Imgs/logo_icon.svg" alt="" class="menuIcon"
+        ><img src="Imgs/logo_icon.svg" alt="" class="menuIcon"
       /></a>
       <a href="#" class="menuText menuElement">Store</a>
       <a href="#" class="menuText menuElement">Mac</a>
@@ -33,15 +33,15 @@
       <a href="#" class="menuText menuElement">Accessories</a>
       <a href="#" class="menuText menuElement">Support</a>
       <a href="#" class="searchIcon menuElement"
-        ><img src="./Imgs/search_icon_icons8.png" alt="" class="menuIcon"
+        ><img src="Imgs/search_icon_icons8.png" alt="" class="menuIcon"
       /></a>
       <a href="#" class="bagIcon menuElement"
-        ><img src="./Imgs/bag_icon.svg" alt="" class="menuIcon"
+        ><img src="Imgs/bag_icon.svg" alt="" class="menuIcon"
       /></a>
 
       <div class="SearchIconClickResult">
         <div class="searchBoxHeader">
-          <img src="./Imgs/search_icon_icons8.png" alt="" />
+          <img src="Imgs/search_icon_icons8.png" alt="" />
           <p class="inputSearchHeader" contenteditable>Search apple.com</p>
           <div class="closeSearchHeader">
             <span class="closeSearchBar1"></span>
@@ -63,7 +63,7 @@
       <div class="topSection">
         <div class="searchBoxRow">
           <div class="searchBox">
-            <img src="./Imgs/search_icon_icons8.png" alt="" />
+            <img src="Imgs/search_icon_icons8.png" alt="" />
             <p class="inputSearch" contenteditable>Search apple.com</p>
             <div class="clearSearchBox">
               <span class="clearSearchBar1"></span>
@@ -114,12 +114,12 @@
           ></a>
         </div>
       </div>
-      <img src="./Imgs/hero_iphone14_cropped.jpg" alt="" />
+      <img src="Imgs/hero_iphone14_cropped.jpg" alt="" />
     </div>
 
     <!-- Gift Banner -->
     <div class="giftBanner" onclick="location.href='#';">
-      <img src="./Imgs/hero_apple_gift_cropped.jpg" alt="" />
+      <img src="Imgs/hero_apple_gift_cropped.jpg" alt="" />
       <h1>Wow yourself.</h1>
       <p>
         Get the gift you've been <br class="breakGiftBannerText" />
@@ -152,13 +152,13 @@
           ></a>
         </div>
       </div>
-      <img src="./Imgs/hero_apple_watch_series_8_cropped.jpg" alt="" />
+      <img src="Imgs/hero_apple_watch_series_8_cropped.jpg" alt="" />
     </div>
 
     <!--MacBook Pro & HomePod Banners -->
     <div class="macBookProAndHomePodBanners">
       <div class="macBookProBanner" onclick="location.href='#';">
-        <img src="./Imgs/macbookpro_cropped.jpg" alt="" />
+        <img src="Imgs/macbookpro_cropped.jpg" alt="" />
         <h1>MacBook Pro</h1>
         <p>
           Supercharged by <br class="breakMacBookProBannerText" />
@@ -180,7 +180,7 @@
         </div>
       </div>
       <div class="homePodBanner" onclick="location.href='#';">
-        <img src="./Imgs/homepod_cropped.jpg" alt="" />
+        <img src="Imgs/homepod_cropped.jpg" alt="" />
         <h1>HomePod</h1>
         <p>Profound Sound</p>
         <h6>Available starting 2.3</h6>
@@ -204,7 +204,7 @@
     <!-- Gift2 & Card Banners -->
     <div class="gift2AndCardBanners">
       <div class="gift2Banner" onclick="location.href='#';">
-        <img src="./Imgs/gift2_cropped.jpg" alt="" />
+        <img src="Imgs/gift2_cropped.jpg" alt="" />
         <h1>A gift for every wish.</h1>
         <p>
           Find something for everyone <br />
@@ -218,7 +218,7 @@
         </div>
       </div>
       <div class="cardBanner" onclick="location.href='#';">
-        <img src="./Imgs/card_cropped.jpg" alt="" />
+        <img src="Imgs/card_cropped.jpg" alt="" />
         <h1><i class="fa-brands fa-apple logoCard"></i>Card</h1>
         <p>
           Get up to 3% Daily Cash back <br />
@@ -250,7 +250,7 @@
         </div>
         <div class="appleTvPlusTopSection">
           <div class="zerothSeries seriesItem">
-            <img class="zerothSeriesImg" src="./Imgs/appleTV+10.jpg" alt="" />
+            <img class="zerothSeriesImg" src="Imgs/appleTV+10.jpg" alt="" />
             <div class="bottomSectionSeries bottomSectionSeries0 noneDisplay">
               <div class="streamNowButton streamNowButton0">
                 <p>Stream now</p>
@@ -266,7 +266,7 @@
           </div>
 
           <div class="firstSeries seriesItem">
-            <img class="firstSeriesImg" src="./Imgs/appleTV+1.jpg" alt="" />
+            <img class="firstSeriesImg" src="Imgs/appleTV+1.jpg" alt="" />
             <div class="bottomSectionSeries bottomSectionSeries1 flexDisplay">
               <div class="streamNowButton streamNowButton1">
                 <p>Stream now</p>
@@ -280,7 +280,7 @@
           </div>
 
           <div class="secondSeries seriesItem">
-            <img class="secondSeriesImg" src="./Imgs/appleTV+2.jpg" alt="" />
+            <img class="secondSeriesImg" src="Imgs/appleTV+2.jpg" alt="" />
             <div class="bottomSectionSeries bottomSectionSeries2 noneDisplay">
               <div class="streamNowButton streamNowButton2">
                 <p>Stream now</p>
@@ -294,7 +294,7 @@
           </div>
 
           <div class="thirdSeries seriesItem">
-            <img class="thirdSeriesImg" src="./Imgs/appleTV+3.jpg" alt="" />
+            <img class="thirdSeriesImg" src="Imgs/appleTV+3.jpg" alt="" />
             <div class="bottomSectionSeries bottomSectionSeries3 noneDisplay">
               <div class="streamNowButton streamNowButton3">
                 <p>Stream now</p>
@@ -308,7 +308,7 @@
           </div>
 
           <div class="fourthSeries seriesItem">
-            <img class="fourthSeriesImg" src="./Imgs/appleTV+4.jpg" alt="" />
+            <img class="fourthSeriesImg" src="Imgs/appleTV+4.jpg" alt="" />
             <div class="bottomSectionSeries bottomSectionSeries4 noneDisplay">
               <div class="streamNowButton streamNowButton4">
                 <p>Stream now</p>
@@ -324,7 +324,7 @@
           </div>
 
           <div class="fifthSeries seriesItem">
-            <img class="fifthSeriesImg" src="./Imgs/appleTV+5.jpg" alt="" />
+            <img class="fifthSeriesImg" src="Imgs/appleTV+5.jpg" alt="" />
             <div class="bottomSectionSeries bottomSectionSeries5 noneDisplay">
               <div class="streamNowButton streamNowButton5">
                 <p>Stream now</p>
@@ -341,7 +341,7 @@
           </div>
 
           <div class="sixthSeries seriesItem">
-            <img class="sixthSeriesImg" src="./Imgs/appleTV+6.jpg" alt="" />
+            <img class="sixthSeriesImg" src="Imgs/appleTV+6.jpg" alt="" />
             <div class="bottomSectionSeries bottomSectionSeries6 noneDisplay">
               <div class="streamNowButton streamNowButton6">
                 <p>Stream now</p>
@@ -357,7 +357,7 @@
           </div>
 
           <div class="seventhSeries seriesItem">
-            <img class="seventhSeriesImg" src="./Imgs/appleTV+7.jpg" alt="" />
+            <img class="seventhSeriesImg" src="Imgs/appleTV+7.jpg" alt="" />
             <div class="bottomSectionSeries bottomSectionSeries7 noneDisplay">
               <div class="streamNowButton streamNowButton7">
                 <p>Stream now</p>
@@ -371,7 +371,7 @@
           </div>
 
           <div class="eighthSeries seriesItem">
-            <img class="eighthSeriesImg" src="./Imgs/appleTV+8.jpg" alt="" />
+            <img class="eighthSeriesImg" src="Imgs/appleTV+8.jpg" alt="" />
             <div class="bottomSectionSeries bottomSectionSeries8 noneDisplay">
               <div class="streamNowButton streamNowButton8">
                 <p>Stream now</p>
@@ -387,7 +387,7 @@
           </div>
 
           <div class="ninthSeries seriesItem">
-            <img class="ninthSeriesImg" src="./Imgs/appleTV+9.jpg" alt="" />
+            <img class="ninthSeriesImg" src="Imgs/appleTV+9.jpg" alt="" />
             <div class="bottomSectionSeries bottomSectionSeries9 noneDisplay">
               <div class="streamNowButton streamNowButton9">
                 <p>Stream now</p>
@@ -403,7 +403,7 @@
           </div>
 
           <div class="tenthSeries seriesItem">
-            <img class="tenthSeriesImg" src="./Imgs/appleTV+10.jpg" alt="" />
+            <img class="tenthSeriesImg" src="Imgs/appleTV+10.jpg" alt="" />
             <div class="bottomSectionSeries bottomSectionSeries10 noneDisplay">
               <div class="streamNowButton streamNowButton10">
                 <p>Stream now</p>
@@ -419,7 +419,7 @@
           </div>
 
           <div class="eleventhSeries seriesItem">
-            <img class="eleventhSeriesImg" src="./Imgs/appleTV+1.jpg" alt="" />
+            <img class="eleventhSeriesImg" src="Imgs/appleTV+1.jpg" alt="" />
             <div class="bottomSectionSeries bottomSectionSeries11 noneDisplay">
               <div class="streamNowButton streamNowButton11">
                 <p>Stream now</p>
