Search boxes modified

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="SearchIconClickResult">
         <div class="searchBoxHeader">
           <img src="Imgs/search_icon_icons8.png" alt="" />
-          <p class="inputSearchHeader" contenteditable>Search apple.com</p>
+          <input type="text" class="inputSearchHeader" placeholder="Search apple.com">
           <div class="closeSearchHeader">
             <span class="closeSearchBar1"></span>
             <span class="closeSearchBar2"></span>
@@ -63,8 +63,8 @@
       <div class="topSection">
         <div class="searchBoxRow">
           <div class="searchBox">
-            <img src="Imgs/search_icon_icons8.png" alt="" />
-            <p class="inputSearch" contenteditable>Search apple.com</p>
+            <img src="Imgs/search_icon_icons8.png" alt="" class="searchBoxImg" />
+            <input type="text" class="inputSearch" placeholder="Search apple.com">
             <div class="clearSearchBox">
               <span class="clearSearchBar1"></span>
               <span class="clearSearchBar2"></span>
